--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
-body {
-    margin: 0;
-    overflow: hidden;
-  }
+/*canvas {
+    padding-left: 0;
+    padding-right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    width: 1200px;
+}
